[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/PlayerStats.gd" type="Script" id=1]

[node name="PlayerStats" type="Label"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1001.0
margin_bottom = -584.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.707092
margin_top = 3.53564
margin_right = 1006.29
margin_bottom = 587.536
color = Color( 0.305882, 0.4, 0.290196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleLabel" type="Label" parent="ColorRect"]
anchor_top = 0.0785675
anchor_bottom = 0.0785675
margin_left = 324.36
margin_top = 13.0675
margin_right = 606.36
margin_bottom = 85.0675
text = "XP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="courageLabel" type="Label" parent="ColorRect"]
margin_left = 195.423
margin_top = 172.799
margin_right = 380.423
margin_bottom = 220.799
text = "Courage"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="ColorRect/courageLabel"]
margin_left = 418.607
margin_top = 24.7487
margin_right = 458.607
margin_bottom = 38.7487
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stealthLabel" type="Label" parent="ColorRect"]
margin_left = 192.594
margin_top = 229.368
margin_right = 377.594
margin_bottom = 277.368
text = "Stealth"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="ColorRect/stealthLabel"]
margin_left = 418.607
margin_top = 24.7487
margin_right = 458.607
margin_bottom = 38.7487
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wisdomLabel" type="Label" parent="ColorRect"]
margin_left = 189.766
margin_top = 291.593
margin_right = 374.766
margin_bottom = 339.593
text = "Wisdom"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="ColorRect/wisdomLabel"]
margin_left = 418.607
margin_top = 24.7487
margin_right = 458.607
margin_bottom = 38.7487
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelLabel" type="Label" parent="ColorRect"]
margin_left = 403.464
margin_top = 367.357
margin_right = 513.464
margin_bottom = 387.357
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/levelLabel"]
anchor_left = 0.255
anchor_top = -3.493
anchor_right = 0.255
anchor_bottom = -3.493
margin_left = -41.7363
margin_top = 72.9813
margin_right = 11.2637
margin_bottom = 101.981
text = "Level:"
align = 1

[node name="bestscoreLabel" type="Label" parent="ColorRect"]
margin_left = 389.616
margin_top = 393.858
margin_right = 558.616
margin_bottom = 426.858
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/bestscoreLabel"]
anchor_left = 0.255
anchor_top = -3.493
anchor_right = 0.255
anchor_bottom = -3.493
margin_left = -123.761
margin_top = 123.893
margin_right = 17.2394
margin_bottom = 152.893
text = "Previously Earned XP :"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
